--- a/webapp.html
+++ b/webapp.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>به مینی‌اپ کارتون تیوی خوش اومدی :)</h1>
+        <h1>Welcome to CarToonTv Mini App :)</h1>
         <p id="user-info">Loading user info...</p>
         <button id="close-btn">Close App</button>
     </div>
