--- a/webapp.html
+++ b/webapp.html
@@ -16,12 +16,21 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
           <img src="https://i.ibb.co/Z10X0yv/photo-2024-07-19-00-22-36.jpg" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
-          <a class="navbar-brand" href="javascript:void(0)">CarToonTv</a>
+          <a class="navbar-brand" href="https://telegram.me/CaarToonTv">CarToonTv</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="javascript:void(0)">لیست انیمیشن‌ها</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://telegram.me/CaarToonTv">درباره‌ما</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://telegram.me/Hosiew">پشتیبانی</a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="text" placeholder="Search">
