--- a/webapp.html
+++ b/webapp.html
@@ -33,7 +33,7 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="text" placeholder="Search">
+              <input class="form-control me-2" type="text" placeholder="اسم کارتون رو وارد کن">
               <button class="btn btn-primary" type="button">Search</button>
             </form>
           </div>
