--- a/webapp.html
+++ b/webapp.html
@@ -22,16 +22,17 @@
           </button>
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
-              <li class="nav-item">
+              <li class="nav-item text-end">
                 <a class="nav-link" href="javascript:void(0)">لیست انیمیشن‌ها</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-end">
                 <a class="nav-link" href="https://telegram.me/CaarToon_Tv">درباره‌ما</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-end">
                 <a class="nav-link" href="https://telegram.me/Hosiew">پشتیبانی</a>
               </li>
             </ul>
+            <hr class="text-white  my-2">
             <form class="d-flex">
               <input class="form-control me-2" type="text" placeholder="اسم کارتون رو وارد کن">
               <button class="btn btn-primary" type="button">Search</button>
