--- a/webapp.html
+++ b/webapp.html
@@ -13,31 +13,31 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-xxl navbar-dark bg-dark">
         <div class="container-fluid">
-          <img src="https://i.ibb.co/Z10X0yv/photo-2024-07-19-00-22-36.jpg" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
-          <a class="navbar-brand" href="https://telegram.me/CaarToon_Tv">CarToonTv</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item text-end">
-                <a class="nav-link" href="javascript:void(0)">لیست انیمیشن‌ها</a>
-              </li>
-              <li class="nav-item text-end">
-                <a class="nav-link" href="https://telegram.me/CaarToon_Tv">درباره‌ما</a>
-              </li>
-              <li class="nav-item text-end">
-                <a class="nav-link" href="https://telegram.me/Hosiew">پشتیبانی</a>
-              </li>
-            </ul>
-            <hr class="text-white  my-2">
+            <img src="https://i.ibb.co/Z10X0yv/photo-2024-07-19-00-22-36.jpg" alt="Avatar Logo" style="width:60px;" class="rounded-pill"> 
+            <a class="navbar-brand" href="https://telegram.me/CaarToon_Tv"><h1>CarToonTv</h1></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mynavbar">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item text-end">
+                        <a class="nav-link" href="javascript:void(0)">لیست انیمیشن‌ها</a>
+                    </li>
+                    <li class="nav-item text-end">
+                        <a class="nav-link" href="https://telegram.me/CaarToon_Tv">درباره‌ما</a>
+                    </li>
+                    <li class="nav-item text-end">
+                        <a class="nav-link" href="https://telegram.me/Hosiew">پشتیبانی</a>
+                    </li>
+                </ul>
+            <hr class="text-white my-2">
             <form class="d-flex">
-              <input class="form-control me-2" type="text" placeholder="اسم کارتون رو وارد کن">
-              <button class="btn btn-primary" type="button">Search</button>
+                <input class="form-control me-2" type="text" placeholder="اسم کارتون رو وارد کن">
+                <button class="btn btn-primary" type="button">Search</button>
             </form>
-          </div>
+            </div>
         </div>
       </nav>
 
