--- a/webapp.html
+++ b/webapp.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-xxl navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <img src="https://i.ibb.co/Z10X0yv/photo-2024-07-19-00-22-36.jpg" alt="Avatar Logo" style="width:50px;" class="rounded-pill"> 
             <a class="navbar-brand" href="https://telegram.me/CaarToon_Tv"><h2>CarToonTv</h2></a>
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item text-end">
-                        <a class="nav-link" href="javascript:void(0)">لیست انیمیشن‌ها</a>
+                        <a class="nav-link" href="javascript:void(0)">انیمیشن‌ها</a>
                     </li>
                     <li class="nav-item text-end">
                         <a class="nav-link" href="https://telegram.me/CaarToon_Tv">درباره‌ما</a>
