--- a/webapp.html
+++ b/webapp.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <img src="https://i.ibb.co/Z10X0yv/photo-2024-07-19-00-22-36.jpg" alt="Avatar Logo" style="width:50px;" class="rounded-pill"> 
@@ -39,8 +38,7 @@
             </form>
             </div>
         </div>
-      </nav>
-
+    </nav>
 
 
 
@@ -55,6 +53,14 @@
 
 
     <div class="container">
+        <div class="login-alert alert alert-dismissible fade">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong>Success!</strong> This alert box could indicate a successful or positive action.
+        </div>
+
+
+
+
         <h1>Welcome to CarToonTv Mini App :)</h1>
         <p id="user-info">Loading user info...</p>
         <button id="close-btn">Close App</button>
