--- a/webapp.html
+++ b/webapp.html
@@ -53,11 +53,11 @@
 
 
     <div class="container">
-        <div class="login-alert alert alert-dismissible fade">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Success!</strong> This alert box could indicate a successful or positive action.
-        </div>
 
+        <div id="login-alert" class="alert alert-dismissible fade">
+            <!-- <button type="button" class="btn-close" data-bs-dismiss="alert"></button> -->
+            <strong id="login-alert-title">Success!</strong> This alert box could indicate a successful or positive action.
+        </div>
 
 
 
