--- a/webapp.html
+++ b/webapp.html
@@ -56,7 +56,7 @@
 
         <div id="login-alert" class="alert alert-dismissible fade">
             <!-- <button type="button" class="btn-close" data-bs-dismiss="alert"></button> -->
-            <strong id="login-alert-title">Success!</strong> This alert box could indicate a successful or positive action.
+            <!-- <strong id="login-alert-title">Success!</strong> This alert box could indicate a successful or positive action. -->
         </div>
 
 
