--- a/webapp.html
+++ b/webapp.html
@@ -55,14 +55,14 @@
     <div class="container">
 
         <div id="login-alert" class="alert alert-dismissible show fade">
+            <p id="user-info">Loading user info...</p>
             <!-- <button type="button" class="btn-close" data-bs-dismiss="alert"></button> -->
             <!-- <strong id="login-alert-title">Success!</strong> This alert box could indicate a successful or positive action. -->
         </div>
 
 
 
-        <h1>Welcome to CarToonTv Mini App :)</h1>
-        <p id="user-info">Loading user info...</p>
+        <!-- <h1>Welcome to CarToonTv Mini App :)</h1> -->
         <button id="close-btn">Close App</button>
     </div>
 </body>
