--- a/webapp.html
+++ b/webapp.html
@@ -61,9 +61,10 @@
         </div>
 
 
-
-        <!-- <h1>Welcome to CarToonTv Mini App :)</h1> -->
-        <button id="close-btn">Close App</button>
+        <div class="text-center">
+            <!-- <h1>Welcome to CarToonTv Mini App :)</h1> -->
+            <button class="text-center" id="close-btn">Close App</button>
+        </div>
     </div>
 </body>
 </html>
