--- a/webapp.html
+++ b/webapp.html
@@ -56,7 +56,7 @@
 
         <div id="login-alert" class="alert alert-dismissible show fade">
             <p id="user-info">Loading user info...</p>
-            <!-- <button type="button" class="btn-close" data-bs-dismiss="alert"></button> -->
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
             <!-- <strong id="login-alert-title">Success!</strong> This alert box could indicate a successful or positive action. -->
         </div>
 
