--- a/webapp.html
+++ b/webapp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini App</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <img src="https://i.ibb.co/Z10X0yv/photo-2024-07-19-00-22-36.jpg" alt="Avatar Logo" style="width:50px;" class="rounded-pill"> 
-            <a class="navbar-brand" href="https://telegram.me/CaarToon_Tv"><h2>CarToonTv</h2></a>
+            <a class="navbar-brand  mx-auto" href="https://telegram.me/CaarToon_Tv"><h2>CarToonTv</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -62,8 +62,7 @@
 
 
         <div class="text-center">
-            <!-- <h1>Welcome to CarToonTv Mini App :)</h1> -->
-            <button class="text-center" id="close-btn">Close App</button>
+            <button type="button" class="btn btn-danger">Close App</button>
         </div>
     </div>
 </body>
