--- a/webapp.html
+++ b/webapp.html
@@ -62,7 +62,7 @@
 
 
         <div class="text-center">
-            <button type="button" class="btn btn-danger">Close App</button>
+            <button id="close-btn" type="button" class="btn btn-danger">Close App</button>
         </div>
     </div>
 </body>
