--- a/webapp.html
+++ b/webapp.html
@@ -52,18 +52,18 @@
 
 
 
-    <div class="container">
+    <div class="container mx-auto ">
 
         <div id="login-alert" class="alert alert-dismissible show fade">
             <p id="user-info">Loading user info...</p>
             <!-- <button type="button" class="btn-close" data-bs-dismiss="alert"></button> -->
             <!-- <strong id="login-alert-title">Success!</strong> This alert box could indicate a successful or positive action. -->
         </div>
-
-
-        <div class="text-center">
+        <!-- style="background-color: black;" -->
+        <div  class="text-center  mt-1">
             <button id="close-btn" type="button" class="btn btn-danger">Close App</button>
         </div>
+        
     </div>
 </body>
 </html>
