--- a/webapp.html
+++ b/webapp.html
@@ -11,11 +11,11 @@
     <script src="app.js" defer></script>
 </head>
 
-<body>
+<body class="bg-black">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <img src="https://i.ibb.co/Z10X0yv/photo-2024-07-19-00-22-36.jpg" alt="Avatar Logo" style="width:50px;" class="rounded-pill"> 
-            <a class="navbar-brand  mx-auto" href="https://telegram.me/CaarToon_Tv"><h2>CarToonTv</h2></a>
+            <a class="navbar-brand  mx-auto" href="https://telegram.me/CaarToon_Tv"><h2>CarToon Tv</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
