--- a/webapp.html
+++ b/webapp.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini App</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -36,22 +37,7 @@
             </div>
         </div>
     </nav>
-
-    <!-- <div class="container rounded-bottom-pill bg-dark pb-3 px-5 col-5">
-        <form class="d-flex mx-auto">
-            <input class="form-control me-2 rounded-pill" dir="rtl" type="text" placeholder="اسم کارتون رو وارد کن">
-            <button class="btn btn-primary" type="button">Search</button>
-        </form>
-    </div> -->
-    <!-- <div class="container rounded-bottom-pill bg-dark pb-3 px-5 col-5">
-        <form class="d-flex mx-auto">
-            <div class="input-group">
-                <input class="form-control rounded-start-pill" dir="rtl" type="text" placeholder="اسم کارتون رو وارد کن">
-                <button class="btn btn-primary rounded-end-pill" type="button">🔎</button>
-            </div>
-        </form>
-    </div> -->
-    <div class="container rounded-bottom-pill bg-dark pb-3 px-5 col-10">
+    <div class="container rounded-bottom-pill bg-dark pb-3 px-5 col-10 col-md-5">
         <form class="d-flex mx-auto">
             <div class="input-group">
                 <input class="form-control rounded-start-pill" dir="rtl" type="text" placeholder="اسم کارتون رو وارد کن">
