--- a/webapp.html
+++ b/webapp.html
@@ -40,7 +40,7 @@
     <div class="container rounded-bottom-pill bg-dark pb-3 px-5 col-10 col-md-5">
         <form class="d-flex mx-auto">
             <div class="input-group">
-                <input class="form-control rounded-start-pill" dir="rtl" type="text" placeholder="اسم کارتون رو وارد کن">
+                <input class="form-control rounded-start-pill" dir="rtl" type="text" placeholder="جست‌وجو کنید...">
                 <button class="btn btn-primary rounded-end-pill" type="button">
                     <i class="bi bi-search"></i>
                 </button>
