--- a/webapp.html
+++ b/webapp.html
@@ -12,7 +12,7 @@
     <script src="app.js" defer></script>
 </head>
 
-<body class="bg-black">
+<body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <img src="https://i.ibb.co/Z10X0yv/photo-2024-07-19-00-22-36.jpg" alt="Avatar Logo" style="width:50px;" class="rounded-pill"> 
